syntax = "proto3";

package rollcall;
option go_package = "proto";

message Account {
	string id = 1;
	uint64 balance = 2;
	uint64 holdings = 3;
}

message RegisterAccountRequest {
	Account account = 1;
}

message RegisterAccountReply {
	string account_id = 1;
}

message GetAccountRequest {
	string account_id = 1;
}

message GetAccountReply {
	Account account = 1;
}

service AccountService {
	rpc RegisterAccount(RegisterAccountRequest) returns (RegisterAccountReply) {}
	rpc GetAccount(GetAccountRequest) returns (GetAccountReply) {}
}

message Order {
	string id = 1;
	string account_id = 2;
	uint64 price = 3;
	uint64 quantity = 4;
	uint64 expiration = 5;
	enum OrderType {
		BID = 0;
		ASK = 1;
	}
	OrderType order_type = 6;
}

message PutOrderRequest {
	Order order = 1;
}

message PutOrderReply {
	string order_id = 1;
}

message TransactionsRequest {
	
}

message Transaction {
	string buy_order_id = 1;
	string sell_order_id = 2;
	string buyer_account_id = 3;
	string seller_account_id = 4;
	uint64 price = 5;
	uint64 quantity = 6;
	uint64 tick = 7;
}

service MarketService {
	rpc PutOrder(PutOrderRequest) returns (PutOrderReply) {}
  rpc Transactions(TransactionsRequest) returns (stream Transaction) {}
}